force-app/main/default/objects/ComunicacinComunicacion__c/ComunicacinComunicacion__c.object-meta.xml
<CustomObject>
    <label>ComunicaciónComunicación</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Código CC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ComunicacionComunicaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>