force-app/main/default/objects/ComunicacinComunicacion__c/fields/ComunicacionPrincipal__c.field-meta.xml
<CustomField>
    <fullName>ComunicacionPrincipal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Comunicación Principal</label>
    <referenceTo>Comunicacion__c</referenceTo>
    <relationshipLabel>Comunicaciones Posteriores</relationshipLabel>
    <relationshipName>ComunicacionComunicaciones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>