force-app/main/default/objects/ComunicacinComunicacion__c/fields/Fecha_Recepcion_Ant__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recepcion_Ant__c</fullName>
    <formula>ComunicacionPrincipal__r.Fecha_de_Recepcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Recepción</label>
    <type>Date</type>
</CustomField>