force-app/main/default/objects/ComunicacinComunicacion__c/fields/Nombre_ComunicacionPost__c.field-meta.xml
<CustomField>
    <fullName>Nombre_ComunicacionPost__c</fullName>
    <formula>ComunicacionSecundaria__r.Nombre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Comunicación</label>
    <type>Text</type>
</CustomField>